--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -4,8 +4,9 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title title Guess Mine
+        link(rel="stylesheet", href="/styles/styles.css")
+        title Guess Mine
     body
         h1 Hello
         script(src="/socket.io/socket.io.js")
-        script(src="/index.js")
+        script(src="/js/main.js")
