--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -2,6 +2,8 @@
 @import "variables";
 @import "reset";
 @import "login";
+@import "./chat.scss";
+@import "./notifiaction.scss";
 
 * {
   box-sizing: border-box;
